@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Fix bug: alsa and ffmpeg use different channel layout.
     Support more LPCM sample rates and number of channels.
     Quick&dirty support for mpeg LPCM streams.
     Workaround for text2skin undrawn OSD areas.
